about col right text underline lighter color

--- a/css/style.css
+++ b/css/style.css
@@ -1132,7 +1132,7 @@ span {
   font-weight: 600;
   letter-spacing: 0.3rem;
   margin-bottom: 10px;
-  text-decoration: underline #000a;
+  text-decoration: underline rgba(0, 0, 0, 0.384);
   text-underline-offset: .3em;
 }
 
