--- a/css/style.css
+++ b/css/style.css
@@ -1321,6 +1321,8 @@ img {
   filter: grayscale(0);
   transform: scale(.925);
   transition: 0.3s ease;
+  border: 1px rgba(77, 77, 77, 0.062) solid;
+
 }
 
 #contact .icon {
