--- a/css/style.css
+++ b/css/style.css
@@ -1309,28 +1309,25 @@ img {
   text-align: center;
   color: #333a;
   border-radius: 10px;
+  border: none;
   background-color: #f4f4f4;
   margin: 1.5em auto;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  box-shadow: var(--box-shadow);
+  box-shadow: var(--box-shadow-hover);
   transition: 0.2s ease;
   cursor: pointer;
-  filter: grayscale(.9);
+  filter: grayscale(.8);
 }
 
 #contact .contact-item:hover,
 #contact .contact-item:focus {
-  /* box-shadow: -5px -5px 1px #dc143c75; */
-  /* border: 1px #dc143c solid; */
-  /* border-radius: 20px; */
-  background-color: #f4f4f4;
-  /* filter: grayscale(0); */
-  transform: scale(.98);
   transition: 0.2s ease;
-  box-shadow: var(--box-shadow-hover);
+  background-color: #f4f4f4;
+  transform: scale(.98);
+  box-shadow: var(--box-shadow);
   border: none;
   filter: none;
 
@@ -1341,9 +1338,9 @@ img {
   margin: 0 auto;
   margin-bottom: 10px;
   padding: .5em;
-  transition: .3s ease;
   border-radius: 10px;
   box-shadow: var(--box-shadow-light-hover);
+  transition: .2s ease;
 }
 #contact .contact-item:hover .icon {
   /* transform: scale(1.05); */
