--- a/css/style.css
+++ b/css/style.css
@@ -1325,7 +1325,7 @@ img {
 #contact .contact-item:hover,
 #contact .contact-item:focus {
   transition: 0.4s ease;
-  background-color: #f4f4f4;
+  background-color: transparent;
   transform: scale(.96);
   box-shadow: var(--box-shadow);
   border: none;
@@ -1346,6 +1346,7 @@ img {
   /* transform: scale(1.05); */
   transition: .2s ease;
   box-shadow: var(--box-shadow);
+  background-color: #f4f4f4;
 }
 
 #contact .contact-info h1 {
@@ -1362,13 +1363,29 @@ img {
   background-clip: text;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
+  position: relative;
   /* box-shadow: var(--box-shadow-light); */
   
 }
 #contact .contact-item:hover h1 {
-  
   transition: .2s ease;
   box-shadow: var(--box-shadow);
+
+}
+#contact .contact-item h1::after {
+  position: absolute;
+  content: '';
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #f4f4f4;
+  border-radius: 10px;
+  z-index: -1;
+  opacity: 0;
+}
+#contact .contact-item:hover h1::after {
+  opacity: 1;
 }
 #contact .contact-info h2 {
   font-size: 1.3rem;
@@ -1383,6 +1400,7 @@ img {
 }
 #contact .contact-item:hover h2 {
   transition: .2s ease;
+  background-color: #f4f4f4;
   color: #000;
   letter-spacing: .159em;
   box-shadow: var(--box-shadow);
