--- a/css/style.css
+++ b/css/style.css
@@ -1307,7 +1307,7 @@ img {
   height: auto;
   padding: 1.5em ;
   text-align: center;
-  color: #ddd;
+  color: #ddda;
   border-radius: 10px;
   border: none;
   margin: 1.5em auto;
