--- a/css/style.css
+++ b/css/style.css
@@ -911,28 +911,19 @@ span {
 
 #projects .projects-header h1 {
   margin-bottom: 50px;
-}
-
-
-#projects-h1 span {
-  animation: projact 5s infinite ease;
+  /* background-image: linear-gradient(90deg, #000, skyblue, #161616 ,#000, skyblue, gold, #dc143c, purple, #dc1489, skyblue, purple, #dc1489, skyblue, #000 ); */
+  background-image: linear-gradient(70deg, #000,purple, skyblue ,#000, skyblue, #dc143c, orange   );
+  background-size: 200%;
+  background-position: 0%;
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  animation: projact 10s infinite alternate;
 }
 
 @keyframes projact {
-  20% {
-    color: darkblue;
-  }
-
-  40% {
-    color: darkgreen;
-  }
-
-  60% {
-    color: gray;
-  }
-
-  80% {
-    color: #000;
+  100% {
+    background-position: 100%;
   }
 }
 
