--- a/css/style.css
+++ b/css/style.css
@@ -912,7 +912,7 @@ span {
 #projects .projects-header h1 {
   margin-bottom: 50px;
   /* background-image: linear-gradient(90deg, #000, skyblue, #161616 ,#000, skyblue, gold, #dc143c, purple, #dc1489, skyblue, purple, #dc1489, skyblue, #000 ); */
-  background-image: linear-gradient(40deg, #000,purple, skyblue ,#000, skyblue, #dc143c,#000, orange, #000 );
+  background-image: linear-gradient(40deg, #000,purple, skyblue ,#000, skyblue, #dc143c, #000, skyblue , purple, #000 );
   background-size: 900%;
   background-position: 0%;
   background-clip: text;
