--- a/css/style.css
+++ b/css/style.css
@@ -634,7 +634,7 @@ span {
 }
 #skills .skills-top {
   width: 90%;
-  padding: 1px 1px 30px 1px;
+  padding: .5em .5em 3em .5em;
   text-align: center;
   margin:5em auto;
   /* background: rgb(255, 255, 255); */
@@ -643,7 +643,7 @@ span {
   backdrop-filter: blur(2px);
   border-radius: 10px;
   /* border: 2px solid #f351718f; */
-  box-shadow: inset 1px 1px 5px #ddda, inset -1px -1px 5px #6e0419b2 ;
+  box-shadow: inset 1px 1px 10px #fff, inset -1px -1px 10px #000 ;
   position: relative;
   z-index: 30;
 }
