--- a/css/style.css
+++ b/css/style.css
@@ -642,15 +642,23 @@ span {
   background: #48556388;
   backdrop-filter: blur(2px);
   border-radius: 10px;
-  /* border: 2px solid #f351718f; */
+  border: none;
   box-shadow: inset 1px 1px 10px #fff, inset -1px -1px 10px #000 ;
   position: relative;
   z-index: 30;
+}
+#skills .skills-top:hover {
+  transition: .3s linear;
+  box-shadow: inset 1px 1px 10px #000, inset -1px -1px 10px #fff ;
 }
 .skills-top p {
   color: #fff;
   background: transparent;
   overflow: hidden;
+  text-shadow: var(--text-shadow-sm);
+}
+#skills .skills-top:hover p {
+  transition: .3s linear;
   text-shadow: var(--text-shadow-lg);
 }
 
