--- a/css/style.css
+++ b/css/style.css
@@ -643,13 +643,9 @@ span {
   backdrop-filter: blur(2px);
   border-radius: 10px;
   border: none;
-  box-shadow: inset 1px 1px 10px #fff, inset -1px -1px 10px #000 ;
+  box-shadow: inset 4px 4px 5px #ddda, inset -4px -4px 5px #000 ;
   position: relative;
   z-index: 30;
-}
-#skills .skills-top:hover {
-  transition: .3s linear;
-  box-shadow: inset 1px 1px 10px #000, inset -1px -1px 10px #fff ;
 }
 .skills-top p {
   color: #fff;
@@ -834,6 +830,8 @@ span {
   box-shadow: inset 3px 3px 5px #fffa,
               inset -3px -3px 5px #000a;
 }
+
+
 
 /* Dropdown Content (Hidden by Default) */
 .dropdown-content {
