--- a/css/style.css
+++ b/css/style.css
@@ -646,6 +646,13 @@ span {
   box-shadow: inset 4px 4px 5px #ddda, inset -4px -4px 5px #000 ;
   position: relative;
   z-index: 30;
+  transition: .3s linear;
+
+}
+#skills .skills-top:hover {
+  transition: .3s linear;
+  transform: scale(1.03);
+  box-shadow: inset 4px 4px 5px #000a, inset -4px -4px 5px #ddda ;
 }
 .skills-top p {
   color: #fff;
@@ -659,23 +666,30 @@ span {
 }
 
 .skills-top::after{
-  content: '';
+    content: '';
     position: absolute;
     width: 45px;
     height: 45px;
-    border-top: 0px solid #cd143c;
-    border-right: 3px solid #f5869c86;
-    border-bottom: 3px solid #f5869c86;
-    border-left: 0px solid #cd143c;
+    border: none;
+    /* border-top: 0px solid #cd143c; */
+    /* border-right: 3px solid #000; */
+    /* border-bottom: 3px solid #000; */
+    /* border-left: 0px solid #cd143c; */
     top: 100%;
     left: 50%;
     margin-left: -24px;
     margin-top: -24px;
     transform: rotate(45deg);
     background-image: linear-gradient(135deg, transparent 48%, #3d4955 0%);
-    
+    box-shadow: inset -5px -5px 5px #000,
+                inset 5px 5px 5px #3d495500;
+    transition: .3s linear;
+  }
+.skills-top:hover.skills-top::after {
+  box-shadow: inset -5px -5px 5px #ddda,
+                inset 5px 5px 5px #3d495500;
+  transition: .3s linear;
 }
-
 
 #skills .skills-bottom {
   display: flex;
