--- a/css/style.css
+++ b/css/style.css
@@ -809,7 +809,8 @@ span {
   background: linear-gradient(0deg, #dc134c, #333);
   color: white;
   /* width: 80vw; */
-  box-shadow: inset 3px 3px 5px #000,
+  box-shadow: 5px 10px 5px #000,
+              inset 3px 3px 5px #000,
               inset -3px -3px 5px #fffa;
   padding: .4em 4em;
   font-size: 2.5em;
@@ -841,7 +842,8 @@ span {
   border-radius: 10px;
   outline: none;
   animation: none;
-  box-shadow: inset 3px 3px 5px #fffa,
+  box-shadow: 5px 10px 10px #000,
+              inset 3px 3px 5px #fffa,
               inset -3px -3px 5px #000a;
 }
 
