--- a/css/style.css
+++ b/css/style.css
@@ -643,7 +643,7 @@ span {
   backdrop-filter: blur(2px);
   border-radius: 10px;
   border: none;
-  box-shadow: inset 4px 4px 5px #ddda, inset -4px -4px 5px #000 ;
+  box-shadow: inset 4px 4px 5px #ddda, inset -4px -4px 5px #000a ;
   position: relative;
   z-index: 30;
   transition: .3s linear;
@@ -652,7 +652,8 @@ span {
 #skills .skills-top:hover {
   transition: .3s linear;
   transform: scale(1.03);
-  box-shadow: inset 4px 4px 5px #000a, inset -4px -4px 5px #ddda ;
+  box-shadow: inset 4px 4px 5px #000a, 
+              inset -4px -4px 5px #ddda ;
 }
 .skills-top p {
   color: #fff;
@@ -681,7 +682,7 @@ span {
     margin-top: -24px;
     transform: rotate(45deg);
     background-image: linear-gradient(135deg, transparent 48%, #3d4955 0%);
-    box-shadow: inset -5px -5px 5px #000,
+    box-shadow: inset -5px -5px 5px #000a,
                 inset 5px 5px 5px #3d495500;
     transition: .3s linear;
   }
@@ -810,7 +811,7 @@ span {
   color: white;
   /* width: 80vw; */
   box-shadow: 5px 10px 5px #000,
-              inset 3px 3px 5px #000,
+              inset 3px 3px 5px #000a,
               inset -3px -3px 5px #fffa;
   padding: .4em 4em;
   font-size: 2.5em;
