--- a/css/style.css
+++ b/css/style.css
@@ -233,7 +233,7 @@ span {
   box-shadow: var(--box-shadow);
   text-shadow: 2px 2px 2px #000;
 
-  transition: .3s linear;
+  transition: .2s linear;
 }
 
 #cta-header::before {
@@ -258,15 +258,13 @@ span {
   }
 }
 
-#cta-header:hover {
-  transition: 2s linear;
+#cta-header:hover, #cta-header:focus {
+  transition: .2s linear;
+  transform: scale(.98);
   box-shadow: var(--box-shadow-hover);
 
 }
 
-#cta-header:hover span, #cta-header:focus span {
-  text-transform: uppercase;
-}
 
 #cta-header span {
   position: relative;
