--- a/css/style.css
+++ b/css/style.css
@@ -841,9 +841,16 @@ span {
   border-radius: 10px;
   outline: none;
   animation: none;
-  box-shadow: 5px 10px 10px #000,
+  box-shadow: 0px 0px 10px #000,
               inset 3px 3px 5px #fffa,
               inset -3px -3px 5px #000a;
+}
+
+.dropbtn:focus {
+  transform: scale(.98);
+  box-shadow: 0px 0px 10px #000,
+              inset 2px 2px 3px #fffa,
+              inset -2px -2px 3px #000a;
 }
 
 
