--- a/css/style.css
+++ b/css/style.css
@@ -381,7 +381,7 @@ span {
 
 #header .nav-list ul a i {
   margin: 0 auto;
-  font-size: 2.2rem;
+  font-size: 2rem;
 } 
 
 #header .nav-list ul a::after {
@@ -2048,17 +2048,16 @@ img {
 
   #header .nav-list ul li {
     display: inline-block;
-    padding:2em 0;
+    /* padding:2em 0; */
   }
 
   #header .nav-list ul li a {
     font-size: 1.8rem;
   }
+  
   #header .nav-list ul li a i {
-    margin-right: .2em;
-  }
-  #header .nav-list ul li a:hover i {
-    /* transition: .1s ease; */
+    margin: .2em auto;
+    font-size: 1.7rem;
   }
   #header .nav-list ul a:after {
     display: none;
