--- a/css/style.css
+++ b/css/style.css
@@ -999,7 +999,10 @@ span {
   margin: 20px auto;
   overflow: hidden;
   border-radius: 10px;
-  border: 1px solid #fff;
+  /* border: 1px solid #ddda; */
+  box-shadow: 0 0 5px #000a,
+              inset 5px 5px 5px #ddda,
+              inset -5px -5px 5px #000;
 }
 
 #projects .project-tile {
@@ -1008,6 +1011,7 @@ span {
   width: 100%;
   height: 100%;
   line-height: 1.9rem;
+  border-radius: 10px;
   display: flex;
   align-items: flex-start;
   justify-content: center;
@@ -1015,7 +1019,8 @@ span {
   background-image: var(--overlay);
   background: #485563c5;
   transition: 1.3s ease;
-
+  box-shadow: inset 5px 0px  5px rgba(150, 149, 149, 0.667),
+              inset -5px -5px 5px #000a;
 }
 
 
@@ -1110,6 +1115,8 @@ span {
   height: 300px;
   overflow: hidden;
   position: relative;
+  padding: 1em;
+  border-radius: 10px;
 }
 
 #projects .project-img::after {
@@ -1119,10 +1126,16 @@ span {
   top: 0;
   height: 100%;
   width: 100%;
+  box-shadow: 0 0 5px #000a,
+              inset 5px 5px 5px #ddd,
+              inset -5px -5px 5px #000;
+
   background-image: linear-gradient(60deg, #29323c, 0%, #585563 100%);
   opacity: 0.5;
 }
-
+#projects .project-img img {
+  border-radius: 5px;
+}
 .tech-list {
   display: inline-flex;
 
@@ -1837,13 +1850,12 @@ img {
     animation: shadow 2s ease-in-out infinite;
   
   }
-  /*End of Sskills Section*/
+  /*End of skills Section*/
 
   /*Project*/
-
   #projects .project-item {
     flex-direction: row;
-    border: 1px solid #ddd;
+    /* border: 1px solid #ddd; */
   }
  #projects .project-tile{
   flex-basis: 50%;
@@ -1883,9 +1895,9 @@ img {
   } */
   #projects .project-item {
     height: 400px;
-    margin: 0;
+    margin: .5em;
     width: 90%;
-    border-radius: 0;
+    border-radius: 5px;
   }
 
   #projects .all-projects .project-info {
