--- a/css/style.css
+++ b/css/style.css
@@ -1011,7 +1011,8 @@ span {
   width: 100%;
   height: 100%;
   line-height: 1.9rem;
-  border-radius: 10px;
+  /* border-radius: 10px; */
+
   display: flex;
   align-items: flex-start;
   justify-content: center;
@@ -1020,7 +1021,7 @@ span {
   background: #485563c5;
   transition: 1.3s ease;
   box-shadow: inset 5px 0px  5px rgba(150, 149, 149, 0.667),
-              inset -5px -5px 5px #000a;
+              inset -3px -5px 5px #000;
 }
 
 
@@ -1116,7 +1117,7 @@ span {
   overflow: hidden;
   position: relative;
   padding: 1em;
-  border-radius: 10px;
+  border-radius: 0px;
 }
 
 #projects .project-img::after {
@@ -1134,7 +1135,10 @@ span {
   opacity: 0.5;
 }
 #projects .project-img img {
-  border-radius: 5px;
+  border-radius: 0px;
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
+
 }
 .tech-list {
   display: inline-flex;
@@ -1859,6 +1863,8 @@ img {
   }
  #projects .project-tile{
   flex-basis: 50%;
+  box-shadow: inset 5px 0px  5px rgba(150, 149, 149, 0.667),
+              inset 0px -5px 5px #000;
 
  }
   #projects .project-tile a {
@@ -1906,7 +1912,19 @@ img {
 
   #projects .all-projects .project-img {
     height: 100%;
+    box-shadow: inset 0px 5px  5px #969595aa,
+              inset -3px -5px 5px #000;
+    border-radius: 0;
+    border-top-left-radius: 0;
+    border-bottom-left-radius: 0;
   }
+  #projects .project-img::after {
+    
+    box-shadow: 0 0 5px #000a,
+                inset -1px 5px 5px #969595aa,
+                inset -5px -5px 5px #000;
+  }
+
   #profile-link {
     animation: shadow 2s ease-in-out infinite;
     color: #ddd;
