--- a/css/style.css
+++ b/css/style.css
@@ -1016,7 +1016,7 @@ span {
   backdrop-filter: blur(1px);
   transition: 1.3s ease;
   box-shadow: inset 5px 0px  5px rgba(150, 149, 149, 0.667),
-              inset -3px -5px 5px #000;
+              inset -3px -5px 5px #000a;
 }
 
 
