--- a/css/style.css
+++ b/css/style.css
@@ -1123,8 +1123,8 @@ span {
   height: 100%;
   width: 100%;
   box-shadow: 0 0 5px #000a,
-              inset 5px 5px 5px #ddd,
-              inset -5px 0px 5px #000;
+              inset 5px 5px 5px #ddda,
+              inset -5px 0px 5px #000a;
 
   background-image: linear-gradient(60deg, #29323c, 0%, #585563 100%);
   opacity: 0.5;
