--- a/css/style.css
+++ b/css/style.css
@@ -1290,29 +1290,65 @@ span {
   height: 100%;
   width: 90%;
   position: relative;
-  border: 1px rgb(199, 196, 196) solid;
-  box-shadow: 10px 10px 3px #0a0a0a59;
-  filter: grayscale(0.3);
+  /* padding: 1em; */
+  /* border: 1px rgb(199, 196, 196) solid; */
+  /* background: #f4f4f4; */
+  /* filter: grayscale(0.6); */
   border-radius: 10px;
   margin-top: 20px;
   transition: all .3s;
 }
 
-#about .col-left .about-img:hover {
-  box-shadow: 5px 5px 0px 1px #dc143ca2;
-  border: 1px #dc143c solid;
-  filter: grayscale(0);
-}
-
-img {
-  height: 100%;
+#about .col-left .about-img::before {
+  position: absolute;
+  content: '';
+  top: 0;
+  left: 0;
   width: 100%;
-  object-fit: cover;
+  height: 100%;
+  opacity: 1;
+  border-radius: 10px;
+  /* box-shadow: var(--box-shadow-hover); */
+  box-shadow: inset 5px 5px 10px #000,
+              inset -5px -5px 10px #fffa;
 }
+#about .col-left .about-img:hover.about-img::before {
+  transition: .3s ease;
+  opacity: 0;
+} 
+
+#about .col-left .about-img::after {
+  position: absolute;
+  content: '';
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  border-radius: 10px;
+  /* box-shadow: var(--box-shadow); */
+  box-shadow: inset 5px 5px 10px #fffa,
+              inset -5px -5px 10px #000;
+}
+#about .col-left .about-img:hover.about-img::after {
+  transition: .3s ease;
+  opacity: 1;
+} 
+
 
 #about .col-left img {
   margin: 0px auto;
+  height: 100%;
+  width: 100%;
   border-radius: 10px;
+  object-fit: cover;
+  transform: scale(.95);
+  transition: .3s ease;
+
+}
+#about .col-left .about-img:hover img{
+    transform: scale(1);
+    transition: .3s ease;
 }
 
 .fcc-link {
