--- a/css/style.css
+++ b/css/style.css
@@ -1296,7 +1296,7 @@ span {
   /* filter: grayscale(0.6); */
   border-radius: 10px;
   margin-top: 20px;
-  transition: all .3s;
+  transition: .3s ease;
 }
 
 #about .col-left .about-img::before {
@@ -1329,6 +1329,7 @@ span {
   /* box-shadow: var(--box-shadow); */
   box-shadow: inset 5px 5px 10px #fffa,
               inset -5px -5px 10px #000;
+  transition: .3s ease;
 }
 #about .col-left .about-img:hover.about-img::after {
   transition: .3s ease;
