--- a/css/style.css
+++ b/css/style.css
@@ -1292,11 +1292,11 @@ span {
   position: relative;
   /* padding: 1em; */
   /* border: 1px rgb(199, 196, 196) solid; */
-  /* background: #f4f4f4; */
-  /* filter: grayscale(0.6); */
+  background: #f4f4f4;
+  /* filter: grayscale(0.3); */
   border-radius: 10px;
   margin-top: 20px;
-  transition: .3s ease;
+  transition: all .3s;
 }
 
 #about .col-left .about-img::before {
@@ -1304,52 +1304,23 @@ span {
   content: '';
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
-  opacity: 1;
-  border-radius: 10px;
-  /* box-shadow: var(--box-shadow-hover); */
-  box-shadow: inset 5px 5px 10px #000,
-              inset -5px -5px 10px #fffa;
+  box-shadow: var(--box-shadow-hover);
 }
-#about .col-left .about-img:hover.about-img::before {
-  transition: .3s ease;
-  opacity: 0;
-} 
 
-#about .col-left .about-img::after {
-  position: absolute;
-  content: '';
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  opacity: 0;
-  border-radius: 10px;
-  /* box-shadow: var(--box-shadow); */
-  box-shadow: inset 5px 5px 10px #fffa,
-              inset -5px -5px 10px #000;
-  transition: .3s ease;
+#about .col-left .about-img:hover {
+  filter: grayscale(0);
 }
-#about .col-left .about-img:hover.about-img::after {
-  transition: .3s ease;
-  opacity: 1;
-} 
 
-
-#about .col-left img {
-  margin: 0px auto;
+img {
   height: 100%;
   width: 100%;
   border-radius: 10px;
   object-fit: cover;
-  transform: scale(.95);
-  transition: .3s ease;
-
+  transform: scale(.9);
 }
-#about .col-left .about-img:hover img{
-    transform: scale(1);
-    transition: .3s ease;
+
+#about .col-left img {
+  margin: 0px auto;
 }
 
 .fcc-link {
