--- a/css/style.css
+++ b/css/style.css
@@ -1112,7 +1112,6 @@ span {
   overflow: hidden;
   position: relative;
   padding: 1em;
-  border-radius: 0px;
 }
 
 #projects .project-img::after {
@@ -1130,6 +1129,13 @@ span {
   opacity: 0.5;
 }
 #projects .project-img img {
+
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+  transform: scale(.97);
+  
+
   border-radius: 0px;
   border-top-left-radius: 5px;
   border-top-right-radius: 5px;
@@ -1278,9 +1284,6 @@ span {
   padding-left: 4px;
 }
 
-
-
-
 .custom-scrollbar-js {
   height: 200px;
   margin-bottom: 2em;
@@ -1290,37 +1293,58 @@ span {
   height: 100%;
   width: 90%;
   position: relative;
-  /* padding: 1em; */
-  /* border: 1px rgb(199, 196, 196) solid; */
-  background: #f4f4f4;
   /* filter: grayscale(0.3); */
   border-radius: 10px;
   margin-top: 20px;
-  transition: all .3s;
+  transition: .3s ease;
 }
-
 #about .col-left .about-img::before {
   position: absolute;
   content: '';
   top: 0;
   left: 0;
-  box-shadow: var(--box-shadow-hover);
+  width: 100%;
+  height: 100%;
+  border-radius: 10px;
+  transition: .3s ease;
+  box-shadow: inset 5px 5px 5px #000a,
+              inset -5px -5px 5px #a7a6a6aa;
 }
 
-#about .col-left .about-img:hover {
-  filter: grayscale(0);
+#about .col-left .about-img:hover.about-img::before {
+  display: none;
+}
+#about .col-left .about-img::after {
+  position: absolute;
+  content: '';
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  /* background: #000; */
+  opacity: 0;
+  border-radius: 10px;
+  transition: .3s ease;
+  box-shadow: inset 5px 5px 10px #fffa,
+              inset -5px -5px 5px #000a;
+  
 }
 
-img {
+#about .col-left .about-img:hover.about-img::after {
+  opacity: 1;
+}
+
+#me {
   height: 100%;
   width: 100%;
   border-radius: 10px;
   object-fit: cover;
-  transform: scale(.9);
-}
-
-#about .col-left img {
   margin: 0px auto;
+  transform: scale(.9);
+  transition: .3s ease;
+}
+#about .col-left .about-img:hover #me {
+  transform: scale(1);
 }
 
 .fcc-link {
