--- a/css/style.css
+++ b/css/style.css
@@ -1243,7 +1243,7 @@ span {
 }
 
 #cv-download {
-  width: 40%;
+  /* width: 40%; */
   text-align: center;
   margin: 1em 2em;
   padding: 1em 1.5em;
@@ -1270,6 +1270,11 @@ span {
   letter-spacing: .1em;
   box-shadow: inset -3px -3px 5px #ddda,
               inset 3px 3px 5px #000a;
+}
+@media screen and (max-width: 320px){
+  #about .col-right:hover.col-right #cv-download {
+    transform: translateY(6.5em);
+  }
 }
 @media screen and (min-width: 400px){
   #about .col-right:hover.col-right #cv-download {
@@ -1384,13 +1389,17 @@ span {
   color: #fff;
   margin: 0 auto;
   padding: 1em;
-  box-shadow: 15px 15px 5px #26262671;
+  box-shadow: 
+              inset 5px 0px 5px #c7c7c7aa,
+              inset -5px -5px 5px #000a;
   text-transform: uppercase;
+  border-bottom-left-radius: 5px;
+  border-bottom-right-radius: 5px;
   /* border-radius: 5px; */
-  outline: 1px solid rgba(255, 255, 255, 0.537);
-  outline-offset: -2px;
-  transition: outline-offset 250ms ease;
-  animation: cv-button 2s ease-in-out infinite;
+  /* outline: 1px solid rgba(255, 255, 255, 0.537); */
+  /* outline-offset: -2px; */
+  /* transition: outline-offset 250ms ease; */
+  /* animation: cv-button 2s ease-in-out infinite; */
 }
 #cv a{
   transition: .3s ease;
